--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>CV of Erika Marttinen</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<h1> Hello World.</h1>
+
+</body>
+</html>
