--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>CV of Erika Marttinen</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>CV of Erika Marttinen</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+        <!-- JavaScript timer for testing purposes -->
+        <script>
+            setTimeout(function(){
+                window.location.reload(1);
+            }, 20000);
+        </script>
+    </head>
 
-<body>
-
-<h1> Hello World.</h1>
-
-</body>
+    <body>
+        <div class="wrapper">
+            <h1>First_name Last_name</h1>
+            <hr class="custom">
+            <h2>Education</h2>
+            <hr class="custom">
+            <h2>Past Employment</h2>
+            <hr class="custom">
+            <h2>Achievements</h2>
+            <hr class="custom">
+            <h2>Skills</h2>
+        </div>
+    </body>
 </html>
