First version of visuals

--- a/index.html
+++ b/index.html
@@ -7,24 +7,106 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
         <!-- JavaScript timer for testing purposes -->
-        <script>
-            setTimeout(function(){
-                window.location.reload(1);
-            }, 20000);
-        </script>
+<!--        <script>-->
+<!--            setTimeout(function(){-->
+<!--                window.location.reload(1);-->
+<!--            }, 20000);-->
+<!--        </script>-->
     </head>
 
     <body>
-        <div class="wrapper">
-            <h1>First_name Last_name</h1>
-            <hr class="custom">
-            <h2>Education</h2>
-            <hr class="custom">
-            <h2>Past Employment</h2>
-            <hr class="custom">
-            <h2>Achievements</h2>
-            <hr class="custom">
-            <h2>Skills</h2>
+        <div class="parent">
+            <div class="wrapper">
+                <div class="grid-container">
+                    <div class="container-1">
+                        <h1>Erika Luise Marttinen</h1>
+                        <hr class="custom">
+                        <h2>
+                            Computer Science Student
+                            <br>at Aalto University
+                        </h2>
+                        <hr class="custom">
+                        <p class="p1">
+                            Email: &nbsp; firstname dot lastname at outlook dot com
+                        </p>
+                    </div>
+                    <div class="container-2">
+                        <img class="imgStyle" id="ErikaMarttinen" src="assets/Profile.png">
+                    </div>
+                </div>
+                <hr class="custom">
+                <div class="grid-container-2">
+                    <div class="container-2-1">
+                        <h2>Education</h2>
+                        <hr class="custom">
+                        <p class="p1">
+                            <b>High school</b>
+                            <br>Helsingin yliopiston Viikin normaaliokulu
+                            <br>August 2017 - June 2020
+                            <br>
+                            <br>
+                            <b>University studies</b>
+                            <br>Computer Science (Tietotekniikka)
+                            <br>Aalto University
+                            <br>September 2020 -
+                        </p>
+                    </div>
+                </div>
+                <hr class="custom">
+                <div class="grid-container-2">
+                    <div class="container-2-1">
+                        <h2>Past Employment</h2>
+                        <hr class="custom">
+                        <p class="p1">
+                            <b>Eficode</b>
+                            <br>UX-designer summer trainee
+                            <br>August 10, 2020 - August 21, 2021
+                            <br>
+                        </p>
+                    </div>
+                </div>
+                <hr class="custom">
+                <div class="grid-container-2">
+                    <div class="container-2-1">
+                        <h2>Achievements</h2>
+                        <hr class="custom">
+                        <p class="p1">
+                            <br> Placed 6th in the national MAOL Chemistry Competition in 2020
+                            <br>
+                            <br> Success in High School Math Competitions
+                            <br>
+                            <br> German Language Certificate DSD II – CEFR: C1
+                            <br>
+                        </p>
+                    </div>
+                </div>
+                <hr class="custom">
+                <div class="grid-container-2">
+                    <div class="container-2-1">
+                        <h2>Skills</h2>
+                        <hr class="custom">
+                        <p class="p1">
+                            <b>Programming</b>
+                            <br>Scala &nbsp; - &nbsp; proficient
+                            <br>C, Java, HTML, CSS &nbsp; - &nbsp; familiar
+                            <br>
+                            <br>
+                            <b>Languages</b>
+                            <br>Native in Finnish and German
+                            <br>Proficient written and oral English
+                            <br>Intermediate Swedish
+                            <br>
+                            <br>
+                            <b>Other</b>
+                            <br>Playing classical piano
+                            <br>Member of the University Choir Dominante
+                            <br>Taekwondo
+                            <br>Reading
+                            <br>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
