Fixed images on GitHub pages

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </p>
                     </div>
                     <div class="container-2">
-                        <img class="imgStyle" id="ErikaMarttinen" src="assets/Profile.png">
+                        <img class="imgStyle" id="ErikaMarttinen" src="assets/profile.png">
                     </div>
                 </div>
                 <hr class="custom">
