Refine text and visuals

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <hr class="custom">
                         <p class="p1">
                             <b>High school</b>
-                            <br>Helsingin yliopiston Viikin normaaliokulu
+                            <br>Helsingin yliopiston Viikin normaalikoulu
                             <br>August 2017 - June 2020
                             <br>
                             <br>
@@ -92,17 +92,26 @@
                             <br>
                             <br>
                             <b>Languages</b>
-                            <br>Native in Finnish and German
-                            <br>Proficient written and oral English
-                            <br>Intermediate Swedish
+                            <br>Finnish, German &nbsp; - &nbsp; native
+                            <br>English &nbsp; - &nbsp; advanced
+                            <br>Swedish &nbsp; - &nbsp; intermediate
                             <br>
                             <br>
                             <b>Other</b>
-                            <br>Playing classical piano
+                            <br>Drawing Digitally
+                            <br>Playing Classical Piano
                             <br>Member of the University Choir Dominante
                             <br>Taekwondo
                             <br>Reading
                             <br>
+                        </p>
+                        <br>
+                    </div>
+                </div>
+                <div class="container-2">
+                    <div class="container-2-2">
+                        <p class="p2">
+                            Background image &copy; Erika Marttinen
                         </p>
                     </div>
                 </div>
